fix spell height overflow

--- a/src/components/DieNet/DieNet.module.scss
+++ b/src/components/DieNet/DieNet.module.scss
@@ -10,6 +10,7 @@
 
   .spellWrapper {
     width: $die-size * 2;
+    max-height: $die-size;
   }
 }
 
@@ -23,6 +24,7 @@
 
   .spellWrapper {
     width: $die-size * 2;
+    max-height: $die-size;
   }
 }
 
